overflow hidden fix for browse table

--- a/console/src/components/Common/TableCommon/ReactTableOverrides.css
+++ b/console/src/components/Common/TableCommon/ReactTableOverrides.css
@@ -4,6 +4,7 @@
 
 .ReactTable .rt-tbody {
   min-height: 40px;
+  overflow: unset;
 }
 
 .ReactTable .rt-noData {
@@ -104,7 +105,10 @@
 .ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
   background-color: #ebf7de;
 }
-
+.ReactTable .rt-table
+{
+  overflow: unset;
+}
 .ReactTable .rt-table .rt-tbody {
   margin-bottom: 10px;
   border: solid 1px rgba(0, 0, 0, 0.05);
@@ -130,7 +134,7 @@
 }
 
 .ReactTable .rt-table .rt-tbody {
-  overflow-x: hidden !important;
+  overflow-x: unset !important;
   min-width: fit-content !important;
 }
 
